src/snapshots/aoc_2022__parser__tests__parse_aoc_file_with_blank.snap
---
source: src/parser.rs
expression: data
---
[
    "1",
    "",
    "2",
    "3",
    "4",
    "",
    "5",
    "6",
]
