src/snapshots/aoc_2022__parser__tests__parse_empty.snap
---
source: src/parser.rs
expression: "vec![first, second]"
---
[
    [
        "1",
    ],
    [
        "",
        "2",
        "3",
    ],
]
