src/snapshots/aoc_2022__parser__tests__parse_into_struct.snap
---
source: src/parser.rs
expression: result
---
[
    TestStruct {
        a: "1",
        b: "2",
    },
    TestStruct {
        a: "3",
        b: "4",
    },
]
