src/snapshots/aoc_2022__parser__tests__parse_until.snap
---
source: src/parser.rs
expression: "vec![first, second]"
---
[
    [
        "aaaa",
        "aaaa",
        "aaaa",
    ],
    [
        "bbbb",
        "bbbb",
        "cccc",
    ],
]
